--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,7 @@ background-color: #c78ed5;
  }
 
  .header-clr {
-  background-color: rgb(208, 47, 26) !important;
+  background-color: rgb(208, 47, 26) ;
  }
 
  .sidebar {
